Fix collection headings vertical alignment on mobile

--- a/client/components/theme-collection/style.scss
+++ b/client/components/theme-collection/style.scss
@@ -29,6 +29,7 @@
 }
 
 .theme-collection__headings {
+	align-self: flex-end;
 	flex-basis: 80%;
 
 	@include break-small {
